<resources>
    <string name="app_name">Reach</string>
    <string name="login_email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create An Account</string>
    <string name="sign_up_u"><u>Sign Up</u></string>
    <string name="sign_out_u"><u>Sign Out</u></string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_debug">Debug</string>
    <string name="title_activity_whatever">whatever</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>