<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:padding="8dp"
    tools:context=".Login">


    <LinearLayout
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:foregroundGravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="sans-serif-condensed"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="346dp"
        android:layout_height="550dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:foregroundGravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/reach_hand" />

        <EditText
            android:id="@+id/email"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#fff"
            android:ems="10"
            android:foregroundTint="#fff"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/dark_purple"
            android:textColorHighlight="#D1BBEC"
            android:textColorHint="#FFFFFF"
            android:textColorLink="@color/teal" />

        <EditText
            android:id="@+id/password"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:backgroundTint="#fff"
            android:ems="10"
            android:foregroundTint="#fff"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textColor="@color/dark_purple"
            android:textColorHighlight="#D1BBEC"
            android:textColorHint="#FFFFFF"
            android:textColorLink="@color/teal" />

        <Button
            android:id="@+id/login"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:text="@string/login_button"
            android:textColor="@color/dark_purple" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="42dp"
            android:background="#63FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:outlineProvider="none"
            android:text="@string/sign_up_u"
            android:textColor="@color/dark_purple" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>